--- a/src/Layouts/Header/style.module.css
+++ b/src/Layouts/Header/style.module.css
@@ -19,6 +19,7 @@
 .callUsTodayButton .icon {
     font-size: 30px;
     color: var(--primary);
+    margin-right: 8px;
 }
 
 .callUsTodayButton .label {
@@ -29,6 +30,7 @@
 
 .callUsTodayButton .number {
     padding-top: 4px;
+    line-height: 1.15   ;
     font-family: var(--primary-font);
     font-size: 18px;
 }
@@ -37,6 +39,8 @@
     margin-left: 16px;
     padding: 8px;
     display: none;
+    font-size: 24px;
+    width: 40px;
 }
 
 @media (max-width: 992px) {
