--- a/src/global.css
+++ b/src/global.css
@@ -9,7 +9,7 @@
   --default-text: #ccc;
   --body-bg: #101010;
   --primary-font: "Poppins", "san serif";
-  --secondary-font: "Hind Madurai", "san serif";
+  --secondary-font: "Hind", "san serif";
   --cursive-font: "Architects Daughter", cursive;
 }
 
