--- a/src/Layouts/Header/MenuItems/style.module.css
+++ b/src/Layouts/Header/MenuItems/style.module.css
@@ -14,6 +14,11 @@
     gap: 4px;
 }
 
+.menuLink > span {
+    font-family: var(--primary-font);
+    font-weight: 900;
+}
+
 .menuLink .icon,
 .menuLink:hover,
 .subMenuLink:hover,
@@ -51,6 +56,7 @@
 
 .subMenuLink {
     width: 100%;
+    color: var(--white);
 }
 
 .subMenuLink:hover {
